--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@
 
 # We use dotenv to load Prisma from Next.js' .env file
 # @see https://www.prisma.io/docs/reference/database-reference/connection-urls
-DATABASE_URL=file:./db.sqlite
+DATABASE_URL=postgresql://root@localhost:26257/defaultdb?sslmode=disable
 
 # @see https://next-auth.js.org/configuration/options#nextauth_url
 NEXTAUTH_URL=http://localhost:3000
