--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -4,7 +4,7 @@
   "main": "index.ts",
   "scripts": {
     "clean": "rm -rf .expo .turbo node_modules",
-    "dev": "expo start --ios",
+    "no-dev": "expo start --ios",
     "dev:android": "expo start --android",
     "dev:ios": "expo start --ios",
     "lint": "eslint .",
