--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint": "turbo lint && manypkg check",
     "lint:fix": "turbo lint:fix && manypkg fix",
     "type-check": "turbo type-check",
-    "with-env": "dotenv -e .env --"
+    "with-env": "dotenv -e .env --",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
@@ -30,5 +31,8 @@
     "prettier-plugin-tailwindcss": "^0.2.4",
     "turbo": "^1.8.3",
     "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "husky": "^8.0.0"
   }
 }
